--- a/package.json
+++ b/package.json
@@ -3,13 +3,29 @@
   "version": "0.0.1",
   "description": "i18n",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha test/test_*"
+  },
   "dependencies": {
     "escodegen": "^1.8.1",
     "esprima": "^3.1.3",
     "underscore": "^1.8.3"
   },
-  "scripts": {
-    "test": "mocha test/test_*"
+  "devDependencies": {
+    "mocha": "^3.4.2"
   },
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Bacra/node-i18nc.git"
+  },
+  "keywords": [
+    "i18n",
+    "ast"
+  ],
+  "author": "Bacra Woo",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Bacra/node-i18nc/issues"
+  },
+  "homepage": "https://github.com/Bacra/node-i18nc"
 }
