--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "i18n",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test_*"
+    "test": "cross-env DEBUG=dbcombo* mocha test/test_*"
   },
   "dependencies": {
+    "debug": "^2.3.0",
     "escodegen": "^1.8.1",
     "esprima": "^3.1.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "cross-env": "^2.0.0",
+    "expect.js": "^0.3.1",
     "mocha": "^3.4.2"
   },
   "repository": {
