--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "cross-env DEBUG=dbcombo* mocha test/test_*"
   },
   "dependencies": {
+    "art-template": "^4.12.1",
     "debug": "^2.3.0",
     "escodegen": "^1.8.1",
     "esprima": "^3.1.3",
-    "underscore": "^1.8.3"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "cross-env": "^2.0.0",
