--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "i18n",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env DEBUG=i18nc* mocha test/test_*"
+    "test": "cross-env DEBUG=i18nc* mocha test/test_*",
+    "test_build": "cross-env DEBUG=i18nc* TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
     "art-template": "^4.12.1",
