--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^2.3.0",
     "escodegen": "^1.8.1",
     "esprima": "^3.1.3",
+    "extend": "^3.0.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
