--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ node_js:
   - lts/*
   - stable
   - unstable
+
+before_install:
+  - npm install -g npm@latest
+
+script:
+  - npm run-script test-travis
+
+after_script:
+  - npm install coveralls@2 && cat ./coverage/lcov.info | coveralls
