--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "i18nc",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "i18n",
   "main": "index.js",
   "scripts": {
+    "prepublish": "npm ls",
     "test": "cross-env DEBUG=i18nc* mocha test/test_*",
+    "test-cov": "istanbul cover ./node_modules/.bin/_mocha -- test/test_* --reporter dot",
+    "test-travis": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- test/test_* --reporter dot",
     "test_build": "cross-env DEBUG=i18nc* TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
@@ -18,6 +21,7 @@
   "devDependencies": {
     "cross-env": "^2.0.0",
     "expect.js": "^0.3.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   },
   "repository": {
