--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "debug": "^2.3.0",
     "escodegen": "^1.8.1",
+    "esmangle": "^1.0.1",
     "esprima": "^3.1.3",
     "extend": "^3.0.1",
     "lodash": "^4.17.4"
