--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "bluebird": "^3.5.1",
     "cross-env": "^2.0.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
