--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*",
     "test-cov": "istanbul cover ./node_modules/.bin/_mocha -- test/test_* --reporter dot",
     "test-travis": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- test/test_* --reporter dot",
-    "test_build": "cross-env TEST_BUILD=true mocha test/test_*"
+    "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
     "debug": "^2.3.0",
