--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nc-core",
-  "version": "7.4.0",
+  "version": "7.5.0",
   "description": "I18N Tool for JS files",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "escodegen": "^1.9.1",
     "esmangle": "^1.0.1",
     "esprima": "^3.1.3",
+    "estraverse": "^4.2.0",
     "extend": "^3.0.1",
     "lodash": "^4.17.5"
   },
