--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prepublish": "npm ls",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*",
-    "test-cov": "istanbul cover ./node_modules/.bin/_mocha -- test/test_* --reporter dot",
-    "test-travis": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- test/test_* --reporter dot",
+    "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
+    "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
     "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
