--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.10"
   },
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "cross-env": "^2.0.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
