--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "i18nc-core",
-  "version": "8.9.0",
+  "version": "9.0.0",
   "description": "I18N Tool for JS files",
   "main": "index.js",
   "scripts": {
     "prepublish": "npm ls",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*",
+    "test-eslint": "eslint .",
     "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
     "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "benchmark": "^2.1.4",
     "cross-env": "^2.0.0",
+    "eslint": "^4.19.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
