--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "npm ls",
+    "lint": "eslint .",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*",
     "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
-    "test-eslint": "eslint .",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
     "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
   },
@@ -24,6 +24,7 @@
     "benchmark": "^2.1.4",
     "cross-env": "^2.0.0",
     "eslint": "^4.19.1",
+    "eslint-config-brcjs": "^0.1.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
