--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "debug": "^3.1.0",
+    "depd": "^1.1.2",
     "escodegen": "^1.10.0",
     "esmangle": "^1.0.1",
     "esprima": "^4.0.0",
