--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -5,4 +5,4 @@ instrumentation:
   default-excludes: true
   excludes:
     - lib/i18n_func/tpl/**
-    - lib/upgrade/getlanguagecode_handler.js
+    - lib/upgrade/tpl/**
