--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint .",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*",
     "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
+    "test-e2e": "karma start --",
+    "test-e2e-dev": "cross-env DEBUG=i18nc-core* karma start --auto-watch --no-single-run --browsers=Chrome",
+    "test-e2e-sauce": "karma start -- sauce",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
     "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
   },
@@ -28,6 +31,8 @@
     "eslint-config-brcjs": "^0.1.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
+    "karma": "^2.0.4",
+    "karma-config-brcjs": "^0.1.0",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
   },
