--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^5.0.1",
     "eslint-config-brcjs": "^0.1.0",
     "expect.js": "^0.3.1",
+    "glob": "^7.1.2",
     "istanbul": "^0.4.5",
     "karma": "^2.0.4",
     "karma-config-brcjs": "^0.1.0",
