--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test-e2e-dev": "cross-env DEBUG=i18nc-core* karma start --auto-watch --no-single-run --browsers=Chrome",
     "test-e2e-sauce": "karma start -- sauce",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
-    "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
+    "test-build": "node test/prev_test_files; cross-env TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
     "debug": "^3.1.0",
