Rename: test path

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "prepublish": "npm ls",
     "lint": "eslint .",
-    "test": "cross-env DEBUG=i18nc-core* mocha test/**/test_*",
-    "test-cov": "istanbul cover _mocha -- test/**/test_* --reporter dot",
+    "test": "cross-env DEBUG=i18nc-core* mocha test/test_*/test_*",
+    "test-cov": "istanbul cover _mocha -- test/test_*/test_* --reporter dot",
     "test-e2e": "karma start --",
     "test-e2e-dev": "cross-env DEBUG=i18nc-core* karma start --auto-watch --no-single-run --browsers=Chrome",
     "test-e2e-sauce": "karma start -- sauce",
-    "test-travis": "istanbul cover _mocha --report lcovonly -- test/**/test_* --reporter dot",
-    "test-build": "node test/prev_test_files; cross-env TEST_BUILD=true mocha test/**/test_*"
+    "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_*/test_* --reporter dot",
+    "test-build": "node test/prev_test_files; cross-env TEST_BUILD=true mocha test/test_*/test_*"
   },
   "dependencies": {
     "debug": "^3.1.0",
