Add: dist file for browser

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "npm ls",
+    "build": "node test/build/i18nc-core",
     "lint": "eslint .",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*/test_*",
     "test-cov": "istanbul cover _mocha -- test/test_*/test_* --reporter dot",
@@ -12,7 +13,7 @@
     "test-e2e-dev": "cross-env DEBUG=i18nc-core* karma start --auto-watch --no-single-run --browsers=Chrome",
     "test-e2e-sauce": "karma start -- sauce",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_*/test_* --reporter dot",
-    "test-build": "node test/prev_test_files; cross-env TEST_BUILD=true mocha test/test_*/test_*"
+    "test-build": "node test/build/i18nc-core; node test/prev_test_files; cross-env TEST_BUILD=true mocha test/test_*/test_*"
   },
   "dependencies": {
     "debug": "^3.1.0",
