--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prepublish": "npm ls",
     "build": "node test/build/i18nc-core",
+    "bench": "node benchmark/index",
     "lint": "eslint .",
     "test": "cross-env DEBUG=i18nc-core* mocha test/test_*/test_*",
     "test-cov": "istanbul cover _mocha -- test/test_*/test_* --reporter dot",
