--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ script:
 after_script:
   - npm install coveralls@2 && cat ./coverage/lcov.info | coveralls
 
+addons:
+  # for gitsubmodule
+  ssh_known_hosts:
+    - github.com
+
 matrix:
   include:
     - node_js: stable
