--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nc-core",
-  "version": "10.4.1",
+  "version": "10.5.0",
   "description": "I18N Tool for JS files",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
+    "comment-parser": "^0.5.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.1.0",
     "eslint-config-brcjs": "^0.2.0",
