--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "esprima": "^4.0.1",
     "estraverse": "^4.2.0",
     "extend": "^3.0.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "i18nc-ast": "^1.0.0"
   },
   "devDependencies": {
     "benchmark": "^2.1.4",
