Add: i18nc-test-req test

--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "eslint-config-brcjs": "^0.2.0",
     "expect.js": "^0.3.1",
     "glob": "^7.1.3",
+    "i18nc-test-req": "^1.1.0",
     "istanbul": "^0.4.5",
     "karma": "^3.0.0",
     "karma-config-brcjs": "^1.1.0",
-    "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
   },
   "repository": {
