Update: test-build script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-e2e-dev": "cross-env DEBUG=i18nc-core* karma start --auto-watch --no-single-run --browsers=Chrome",
     "test-e2e-sauce": "karma start -- sauce",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_*/test_* --reporter dot",
-    "test-build": "node test/build; cross-env TEST_BUILD=true mocha test/test_*/test_*"
+    "test-build": "node test/build && cross-env TEST_BUILD=true mocha test/test_*/test_*"
   },
   "dependencies": {
     "debug": "^4.1.0",
