--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "debug": "^4.1.0",
     "depd": "^2.0.0",
     "escodegen": "^1.11.0",
-    "esmangle": "^1.0.1",
+    "esshorten4node11": "^1.1.2",
     "esprima": "^4.0.1",
     "estraverse": "^4.2.0",
     "lodash": "^4.17.11",
