--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Bacra/node-i18nc-core.git"
+    "url": "git@github.com:Bacra/i18nc-core.git"
   },
   "keywords": [
     "i18n",
@@ -58,7 +58,7 @@
   "author": "Bacra Woo<bacra.woo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bacra/node-i18nc-core/issues"
+    "url": "https://github.com/Bacra/i18nc-core/issues"
   },
-  "homepage": "https://github.com/Bacra/node-i18nc-core"
+  "homepage": "https://github.com/Bacra/i18nc-core"
 }
