--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ node_js:
 script:
   - npm run lint
   - npm run bootstrap
-  - npm run test-travis
+  - npm run test-ci
 
 after_script:
-  - npm install coveralls@2 && cat ./coverage/lcov.info | coveralls
+  - npm install coveralls@2 -g
+  - for file in ./packages/*/coverage/lcov.info; do cat $file | coveralls; done
 
 # addons:
   # for gitsubmodule
