--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "lerna": "^3.16.4",
-    "eslint": "^5.5.0",
-    "eslint-config-brcjs": "^1.0.0"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-brcjs": "^1.1.1"
   }
 }
