Fix: test-e2e script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "lerna run build && node build/index",
     "test": "lerna run test",
     "test-ci": "lerna run test-ci",
-    "test-cov": "lerna run test-cov"
+    "test-cov": "lerna run test-cov",
+    "test-build": "lerna run test-build",
+    "test-e2e": "lerna run test-e2e",
+    "test-e2e-dev": "lerna run test-e2e-dev",
+    "test-e2e-sauce": "lerna run test-e2e-sauce"
   },
   "devDependencies": {
     "lerna": "^3.16.4",
