--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,8 @@
-coverage/
-test/tmp/
-test/output/
-test/example/
-test/files/
+**/test/tmp/
+**/test/output/
+**/test/example/
+**/test/files/
 
+coverage/
 dist/
 node_modules/
