--- a/packages/i18nc-jsoncode1/package.json
+++ b/packages/i18nc-jsoncode1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nc-jsoncode1",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "I18N JSON Code Tool",
   "main": "index.js",
   "scripts": {
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "debug": "^4.0.1",
-    "lodash": "^4.17.11",
-    "i18nc-ast": "^1.0.0"
+    "i18nc-ast": "^1.0.2",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "escodegen": "^1.11.0",
     "expect.js": "^0.3.1",
-    "i18nc-test-req": "^1.1.0",
+    "i18nc-test-req": "^1.2.1",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
