--- a/packages/i18nc-loader/package.json
+++ b/packages/i18nc-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nc-loader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "I18N Loader for Webpack",
   "main": "index.js",
   "scripts": {
@@ -10,21 +10,21 @@
     "test-travis": "npm run example && istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot"
   },
   "dependencies": {
-    "loader-utils": "^1.1.0",
     "debug": "^4.1.0",
-    "lodash": "^4.17.11",
     "extend": "^3.0.2",
-    "i18nc": "^4.6.1"
+    "i18nc": "^4.6.7",
+    "loader-utils": "^1.1.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "webpack-cli": "^3.1.2",
-    "webpack": "^4.23.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.8.0",
     "eslint-config-brcjs": "^0.2.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
   },
   "repository": {
     "type": "git",
