--- a/packages/i18nc-ast/package.json
+++ b/packages/i18nc-ast/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "debug": "^4.1.0",
     "escodegen": "^1.13.0",
-    "esprima-master": "^4.2.0"
+    "esprima": "^4.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Bacra/i18nc.git"
+    "url": "git@github.com:iGdea/i18nc.git"
   },
   "keywords": [
     "i18n",
@@ -20,7 +20,7 @@
   "author": "Bacra Woo<bacra.woo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bacra/i18nc/issues"
+    "url": "https://github.com/iGdea/i18nc/issues"
   },
-  "homepage": "https://github.com/Bacra/i18nc"
+  "homepage": "https://github.com/iGdea/i18nc"
 }
