--- a/packages/i18nc-db-file/package.json
+++ b/packages/i18nc-db-file/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Bacra/i18nc.git"
+    "url": "git+ssh://git@github.com/iGdea/i18nc.git"
   },
   "keywords": [
     "i18n",
@@ -21,9 +21,9 @@
   "author": "Bacra Woo <bacra.woo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bacra/i18nc/issues"
+    "url": "https://github.com/iGdea/i18nc/issues"
   },
-  "homepage": "https://github.com/Bacra/i18nc",
+  "homepage": "https://github.com/iGdea/i18nc",
   "dependencies": {
     "bluebird": "^3.5.3",
     "debug": "^4.1.0",
@@ -38,7 +38,6 @@
     "cross-env": "^5.2.0",
     "expect.js": "^0.3.1",
     "i18nc-test-req": "^2.0.0",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0"
   }
 }
