--- a/packages/i18nc-po/package.json
+++ b/packages/i18nc-po/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env DEBUG=i18nc-po* mocha test/test_*",
-    "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
-    "test-ci": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot",
     "test-build": "cross-env TEST_BUILD=true mocha test/test_*"
   },
   "dependencies": {
@@ -21,13 +19,12 @@
     "cross-env": "^5.2.0",
     "expect.js": "^0.3.1",
     "i18nc-core": "^11.2.4",
-    "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:Bacra/i18nc.git"
+    "url": "git@github.com:iGdea/i18nc.git"
   },
   "keywords": [
     "i18n",
@@ -38,7 +35,7 @@
   "author": "Bacra Woo<bacra.woo@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Bacra/i18nc/issues"
+    "url": "https://github.com/iGdea/i18nc/issues"
   },
-  "homepage": "https://github.com/Bacra/i18nc"
+  "homepage": "https://github.com/iGdea/i18nc"
 }
